--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Welcome to My AI Web Page</title>
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first AI-powered website.</p>
-  </body>
+<head>
+  <title>My AI Chat</title>
+</head>
+<body>
+  <h1>Chat with AI!</h1>
+  <input type="text" id="userInput" placeholder="Type your message...">
+  <button onclick="sendToOpenAI()">Send</button>
+  <div id="responseBox"></div>
+
+  <script src="script.js"></script>
+</body>
 </html>
